// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.api.v2alpha;

option java_package = "org.wfanet.measurement.api.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "ApiKeyProto";

// Resource representing a revocable authentication key for this API.
message ApiKey {
  message Key {
    // ID of parent `Account`.
    string account_id = 1;

    // ID of this `ApiKey`.
    string api_key_id = 2;
  }
  // Resource key.
  Key key = 1;

  // Human-readable nickname for this `ApiKey`. Required.
  string nickname = 2;

  // Optional human-readable description for the intended usage of this
  // `ApiKey`.
  string description = 3;

  // The actual API key for authentication. Output-only. Only set in
  // `CreateApiKey` responses.
  string authentication_key = 4;
}
